<resources>
    <string name="app_name">EilmarkAndroid</string>
    <!-- Bottom navigation -->
    <string name="title_home">فروشگاه</string>
    <string name="title_explore">جستجو</string>
    <string name="title_cart">سبدخرید</string>
    <string name="title_wish">علاقه مندی</string>
    <string name="title_profile">حساب کاربری</string>
    <!-- Home -->
    <string name="cart_modal_title">افزودن محصول جدید</string>
    <string name="add_to_cart">افزودن به سبد</string>
    <string name="title_price">قیمت</string>
    <string name="title_pay">پرداختی</string>
    <string name="title_payment">پرداخت</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_products">جدیدترین محصولات</string>
    <string name="all">همه</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">ایمیل یا شماره همراه</string>
    <string name="prompt_password">رمز عبور</string>
    <string name="action_sign_in">ورود</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
