<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/cart_modal_title"
            android:textColor="@color/dark"
            android:textSize="@dimen/H5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/default_margin"
            android:src="@drawable/ic_close_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <!--    <Button-->
        <!--        android:id="@+id/submit"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginHorizontal="@dimen/default_margin"-->
        <!--        android:background="@drawable/btn_icon_primary"-->
        <!--        android:fontFamily="@font/vazir_medium"-->
        <!--        android:text="ثبت تغییرات"-->
        <!--        android:textSize="@dimen/H5" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_vertical"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="25dp"
        android:paddingHorizontal="@dimen/default_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:background="@drawable/border_bottom">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/artisho"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/rounded_border"/>

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_wish"
                android:fontFamily="@font/vazir_medium"
                android:textSize="@dimen/H5"
                android:textColor="@color/dark"
                app:layout_constraintTop_toTopOf="@id/product_image"
                android:paddingRight="@dimen/default_margin"
                app:layout_constraintRight_toLeftOf="@id/product_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_wish"
                android:fontFamily="@font/vazir_medium"
                android:textSize="12dp"
                android:textColor="#A5AEc0"
                app:layout_constraintBottom_toBottomOf="@id/product_image"
                android:paddingRight="@dimen/default_margin"
                app:layout_constraintRight_toLeftOf="@id/product_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12000 تومان"
                android:fontFamily="@font/vazir_medium"
                android:textSize="@dimen/H5"
                android:textColor="@color/dark"
                app:layout_constraintBottom_toBottomOf="@id/product_image"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir_medium"
                    android:text="@string/title_price"
                    android:textColor="@color/dark"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir_bold"
                    android:text="2000 تومان"
                    android:textColor="@color/dark"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir"
                    android:text="@string/title_pay"
                    android:textColor="@color/dark"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir_bold"
                    android:text="2000 تومان"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/default_margin"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/submit_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/amount"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_dash_primary_24dp"
            android:background="@drawable/flat_bordered_btn"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_bold"
            android:text="1"
            android:textSize="17sp"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintRight_toLeftOf="@id/add"
            app:layout_constraintBottom_toBottomOf="@+id/add" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_plus_primary_24dp"
            android:background="@drawable/flat_bordered_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
